# dnd

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api_overview/: urls.py  views.py
campaigns/: admin.py  constants.py  decorators.py  management_views.py  models.py  serializers.py  signals.py  urls.py  views.py
campaigns/migrations/: 0001_initial.py  0002_alter_campaign_characters.py  0002_alter_character_status.py  0002_alter_characterability_character.py  0002_campaign_characters_campaign_description_and_more.py  0003_alter_campaign_characters.py  0003_alter_characterskill_value.py  0004_characterability_auto_calculate.py  0005_alter_characterskill_value.py  0006_alter_characterability_options_and_more.py  0007_character_speed.py  0008_savingthrow.py  0009_passiveskill.py  0010_character_armor_class_character_heavy_armor_and_more.py  0011_spellslot.py  0012_character_magical_property_and_more.py  0013_remove_character_created.py  0014_alter_characterability_options_and_more.py  0015_remove_character_character_class.py  0016_inventory_item_tag_itemtag_inventoryitem.py  0017_alter_inventory_options_alter_inventory_character.py  0020_characterspell.py  0024_session_campaign.py  (+10 more)
character_classes/: apps.py  models.py
characters/: admin.py  models.py  serializers.py  urls.py  views.py
dnd/: asgi.py  settings.py  urls.py  wsgi.py
dnd_data/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
management/: urls.py  views.py
races/: admin.py  models.py  serializers.py  urls.py  views.py
(+58 files in other folders)
